Bug 359287 - Color Picker color preview is broken in Krita 3.0
Summary: Color Picker color preview is broken in Krita 3.0
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: 3.0 Alpha
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-02-11 21:08 UTC by Dmitry Kazakov
Modified: 2016-03-31 11:47 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dmitry Kazakov 2016-02-11 21:08:05 UTC
Ctrl+click on canvas and start dragging. There should be a popup showing a current and previous colors. It doesn't work :(

Reproducible: Always
Comment 1 wolthera 2016-02-11 23:24:50 UTC
can confirm here, though this is on your branch.
Comment 2 Sven Langkamp 2016-03-24 12:23:05 UTC
Appears to work here with master.
Comment 3 Dmitry Kazakov 2016-03-31 11:47:35 UTC
Git commit 75b5a2638603ed4aa7071ddf8c7eeda3a93b794a by Dmitry Kazakov.
Committed on 31/03/2016 at 11:47.
Pushed by dkazakov into branch 'kazakov-interruptions-T1946'.

Fix restoring cursor after using Pan or Zoom actions

Fixes T1591

M  +2    -2    libs/ui/canvas/kis_mirror_axis.cpp

http://commits.kde.org/krita/75b5a2638603ed4aa7071ddf8c7eeda3a93b794a