Fix restoring cursor after using Pan or Zoom actions

Fixes T1591
BUG:359287