libs/ui/canvas/kis_mirror_axis.cpp
@@ -289,14 +289,14 @@ bool KisMirrorAxis::eventFilter(QObject* target, QEvent* event)
     }
     if(event->type() == QEvent::MouseButtonRelease || event->type() == QEvent::TabletRelease) {
 
-         QApplication::restoreOverrideCursor();
-
         if(d->xActive) {
+            QApplication::restoreOverrideCursor();
             d->xActive = false;
             event->accept();
             return true;
         }
         if(d->yActive) {
+            QApplication::restoreOverrideCursor();
             d->yActive = false;
             event->accept();
             return true;
